feat(agent): ground endgame answers in direct rules